# get-papers-list

./: README.md  pyproject.toml
get_papers_list/: fetcher.py  main.py  utils.py  writer.py
